etc/iptables/ip6tables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

# loopback
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A INPUT -s ::1 -d ::1 -j ACCEPT
-A OUTPUT -s ::1 -d ::1 -j ACCEPT

# ACCEPT already ESTABLISHED connections
-A INPUT -p ALL -i enp0s25 -m state --state ESTABLISHED,RELATED -j ACCEPT

# DROP --rt-type 0
-A INPUT -m rt --rt-type 0 -j DROP
-A OUTPUT -m rt --rt-type 0 -j DROP
-A FORWARD -m rt --rt-type 0 -j DROP

# ACCEPT all OUTPUT
-A OUTPUT -p ALL -o enp0s25 -j ACCEPT

# SSH
-A INPUT -p tcp -i enp0s25 --dport 22 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -i enp0s25 --dport 22 -m state NEW,ESTABLISHED -j ACCEPT

# DNS
-A INPUT -p udp -i enp0s25 --dport 53 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -i enp0s25 --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT

# HTTP(S)
-A INPUT -p tcp -i enp0s25 --dport 80,443 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -i enp0s25 --dport 80,443 -m state --state NEW,ESTABLISHED -j ACCEPT

# ICMP
-A INPUT -p ipv6-icmp -j DROP
-A OUTPUT -p ipv6-icmp -j ACCEPT

COMMIT
